manifests/ingress-gateway/gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-discovery: enabled
  
  name: ingress-gateway
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  labels:
    app: ingress-gateway

  name: prod-gateway
  namespace: ingress-gateway

spec:
  gatewayClassName: istio
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
